--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stefan Alexandru Soreanu</title>
-    <link rel="stylesheet" href="/assets/css/style.scss"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="salexandru-123/salexandru-123.github.io/assets/css/style.scss"> <!-- Link to your CSS file -->
 </head>
 <body>
 
