--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
----
----
-
-@import "{{ site.theme }}";
-
 /* Reset default browser styles */
 body, h1, h2, h3, p, ul, li, button, input, textarea {
     margin: 0;
@@ -12,7 +7,7 @@ body, h1, h2, h3, p, ul, li, button, input, textarea {
 
 /* Global styles */
 body {
-    background-color: #f7f7f7;
+    background-color: white;
     color: #333;
 }
 
@@ -38,6 +33,7 @@ nav ul li a {
 }
 
 main {
+    align-content: center;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -45,8 +41,24 @@ main {
 
 section {
     margin-bottom: 40px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
 
+#contact{
+    display: block;
+    text-align: center;
+}
+
+#contact form{
+    width: 100%;
+    text-align: center;
+}
+#contact form input,textarea {
+    width: 100%;
+}
 h1, h2, h3 {
     margin-bottom: 10px;
 }
@@ -97,4 +109,18 @@ footer {
     text-align: center;
     padding: 20px;
     margin-top: 40px;
+}
+
+
+#hero img{
+    max-width: 40%;
+    max-height: 50%;
+    margin: 2%;
+}
+.project{
+    text-align: center;
+    margin-top: 0.5cm;
+}
+.project img{
+    margin: 1.5%;
 }
